# hrms_demo

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  hrms  run-tests.sh
.cospec/: TEST_GUIDE.md
.cospec/recruiting-interview-hiring/: .cometa.json  design.md  requirements.md  tasks.md
.cospec/wiki/: 01-product-goals-and-background.md  02-users-and-business-scenarios.md  1、Project Overview & Quick Start.md  2、System Architecture & Technical Design.md  index.md  (+2 more)
.playwright-mcp/: page-2026-04-02T14-11-12-364Z.yml  page-2026-04-02T14-12-32-663Z.yml  page-2026-04-02T14-13-43-795Z.yml  page-2026-04-02T14-13-52-779Z.yml  page-2026-04-02T14-15-31-966Z.yml  page-2026-04-02T14-16-05-296Z.yml  page-2026-04-02T14-16-26-146Z.yml  page-2026-04-02T14-16-50-284Z.yml  page-2026-04-02T14-17-35-756Z.yml  page-2026-04-02T14-17-51-855Z.yml  page-2026-04-02T14-18-54-001Z.yml
.roo/: mcp.json
backend/: data.db  database.py  main.py  models.py  pyproject.toml  requirements.txt  schemas.py  seed.py
backend/routers/: approvals.py  attendance.py  candidates.py  dashboard.py  departments.py  employees.py  evaluations.py  interviews.py  offers.py  positions.py  salary.py
backend/services/: approval_engine.py  hiring_service.py  salary_calculator.py
backend/tests/: conftest.py  test_dashboard.py  test_departments.py  test_employees.py  test_positions.py  test_recruiting.py  test_workflows.py
data/: hrms.db
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vitest.config.ts
test_logs/: test_summary.txt
(+39 files in other folders)
